# cuda_nn

./: .gitignore  CMakeLists.txt  README.md
py/: dataset.py  inference.py  model.py  save_params.py  train.py
src/: main.cpp  train.cpp
src/utils/: idx_parser.cpp  idx_parser.cpp.bak  model.cu  model_parser.cpp
src/utils/include/: idx_parser.h  model.h  model_parser.h
